force-app/main/default/objects/CaseClosed__e/CaseClosed__e.object-meta.xml
<CustomObject>
    <label>Case closed</label>
    <pluralLabel>Cases closed</pluralLabel>
</CustomObject>