force-app/main/default/objects/CaseClosed__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>