force-app/main/default/objects/CaseClosed__e/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <label>Close reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>