force-app/main/default/objects/CaseClosed__e/fields/PriorStatus__c.field-meta.xml
<CustomField>
    <fullName>PriorStatus__c</fullName>
    <label>Prior status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>